--- a/MSGateway/src/main/resources/application.properties
+++ b/MSGateway/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.cloud.gateway.routes[0].id=product
 spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
 
-spring.cloud.gateway.routes[1].id=stock
-spring.cloud.gateway.routes[1].predicates[0]=Path=/stock/**
+spring.cloud.gateway.routes[1].id=classe
+spring.cloud.gateway.routes[1].predicates[0]=Path=/classe/**
 spring.cloud.gateway.routes[1].uri=http://localhost:8090
 
 
